[package]
name = "concurrency"                     # enter your project name
version = "0.1.0"
edition = "2021"
authors = ["Noah <upupqi.cs@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
dashmap = "^6.0.1"
oneshot = "^0.1.8"
rand = "^0.8.5"
tokio = { version = "^1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
tracing = "^0.1.40"
tracing-subscriber = "^0.3.18"
